--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <main>
     <section class="card">
       <div class="search">
-        
+        <select id="seasonSelect"></select>
         <input id="q" type="search" placeholder="Search player…" />
         <select id="sort">
           <option value="Rank|asc">Sort: Rank (asc)</option>
